--- a/app/templates/cashier/cashier_side.html
+++ b/app/templates/cashier/cashier_side.html
@@ -132,7 +132,7 @@
               <span class="dark:text-gray-200">Total</span>
               <span class="total dark:text-gray-200">$0.00</span>
             </div>
-            <button class="w-full bg-red-500 text-white p-2 rounded mt-4 hover:bg-red-600 dark:bg-red-600 print-bills-btn">
+            <button class="print-bills-btn w-full bg-red-500 text-white p-2 rounded mt-4 hover:bg-red-600 dark:bg-red-600 print-bills-btn">
               Print Bills
             </button>
           </div>
