--- a/app/templates/manager/layout.html
+++ b/app/templates/manager/layout.html
@@ -50,6 +50,12 @@
                     </svg>
                     <span class="flex-1 ms-3 whitespace-nowrap">Recommendation</span>
                 </a>
+            </button>
+            <button href="#" class="flex items-center p-2 text-gray-700 hover:bg-gray-200 rounded nav-link dark:text-gray-300 dark:hover:bg-gray-700" data-section="history" id="historyLink">
+              <svg class="sidebar-icon w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+              </svg>
+              <span class="sidebar-text">History</span>
             </button>    
             <button class="flex items-center p-2 text-gray-700 hover:bg-gray-200 rounded nav-link dark:text-gray-300 dark:hover:bg-gray-700" data-section="logout" onclick="window.location.href='{% url 'logout' %}'">
                 <svg class="sidebar-icon w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
